ch22/wp-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wp-dep
  name: wp-dep

spec:
  replicas: 2
  selector:
    matchLabels:
      app: wp-dep

  template:
    metadata:
      labels:
        app: wp-dep
 
    spec:
      containers:
        - name: wordpress
          image: wordpress:5
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wp-svc
  name: wp-svc

spec:
  ports:
    - name: http-80
      port: 80
      targetPort: 80
      nodePort: 5100
      protocol: TCP
  type: NodePort
  selector:
    app: wp-dep
